// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuickReply - Mobile Snapshots > matches snapshot on mobile viewport 1`] = `
<div
  aria-busy="false"
  class="relative flex"
  data-testid="quick-reply"
>
  <div
    class="-mt-4 w-3 shrink-0"
    data-testid="container"
  >
    <div
      data-testid="quick-reply-connector"
      height="189"
      variant="last"
    />
  </div>
  <div
    class="relative w-full"
    data-testid="container"
  >
    <div
      class="w-full"
      data-testid="container"
    >
      <button
        aria-expanded="false"
        class="flex w-full cursor-pointer items-center rounded-md border border-dashed border-input p-6 text-left transition-colors outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 gap-3"
        data-slot="button"
        data-testid="quick-reply-trigger"
        type="button"
      >
        <div
          data-avatar-url="https://example.com/avatar/user:me"
          data-name="Test User"
          data-size="default"
          data-testid="quick-reply-avatar"
        />
        <p
          class="min-w-0 flex-1 truncate text-left font-medium text-input text-base leading-6"
          data-testid="quick-reply-placeholder"
        >
          What are your thoughts on this?
        </p>
      </button>
    </div>
  </div>
</div>
`;

exports[`QuickReply - Snapshots > matches snapshot with default props 1`] = `
<div
  aria-busy="false"
  class="relative flex"
  data-testid="quick-reply"
>
  <div
    class="-mt-4 w-3 shrink-0"
    data-testid="container"
  >
    <div
      data-testid="quick-reply-connector"
      height="189"
      variant="last"
    />
  </div>
  <div
    class="relative w-full"
    data-testid="container"
  >
    <div
      class="w-full"
      data-testid="container"
    >
      <button
        aria-expanded="false"
        class="flex w-full cursor-pointer items-center rounded-md border border-dashed border-input p-6 text-left transition-colors outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 gap-5"
        data-slot="button"
        data-testid="quick-reply-trigger"
        type="button"
      >
        <div
          data-avatar-url="https://example.com/avatar/user:me"
          data-name="Test User"
          data-size="xl"
          data-testid="quick-reply-avatar"
        />
        <p
          class="min-w-0 flex-1 truncate text-left font-medium text-input text-xl leading-7"
          data-testid="quick-reply-placeholder"
        >
          What are your thoughts on this?
        </p>
      </button>
    </div>
  </div>
</div>
`;
